cool this is free of vulnrabilities
Former-commit-id: 96c3a9ba6ca5f9df9f4493d82996a324be565dcf

--- a/package.json
+++ b/package.json
@@ -206,7 +206,7 @@
     "jsdom": "^11.12.0",
     "mini-css-extract-plugin": "^0.5.0",
     "minimist": "^1.2.0",
-    "optimize-css-assets-webpack-plugin": "^4.0.3",
+    "optimize-css-assets-webpack-plugin": "^5.0.1",
     "react-addons-test-utils": "^15.6.0",
     "react-test-renderer": "^15.6.1",
     "redux-logger": "^3.0.6",
@@ -235,7 +235,7 @@
     "alert-node": "^1.2.2",
     "async": "^2.6.1",
     "auto-launch": "^5.0.5",
-    "axios": "^0.18.0",
+    "axios": "^0.19.0",
     "browserslist": "^4.3.5",
     "btoa": "^1.2.1",
     "chai": "^4.2.0",
@@ -299,14 +299,15 @@
     "source-map-support": "^0.5.9",
     "stream-normalize-eol": "^1.0.1",
     "systeminformation": "^3.45.7",
-    "tarball-extract": "0.0.6",
+    "tar": "^4.4.10",
     "three": "^0.98.0",
     "three-orbit-controls": "^82.1.0",
     "universal-analytics": "^0.4.17",
     "url-join": "^4.0.0",
     "victory": "^30.5.1",
     "wait-on": "^3.0.1",
-    "xmlhttprequest": "^1.8.0"
+    "xmlhttprequest": "^1.8.0",
+    "zlib": "^1.0.5"
   },
   "devEngines": {
     "node": ">=10.x",
