--- a/package.json
+++ b/package.json
@@ -15,24 +15,16 @@
     "build-preload-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.preload.dev.js --color",
     "build-preload": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.preload.prod.js --color",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
-    "lint": "eslint --cache --format=node_modules/eslint-formatter-pretty .",
-    "lint-fix": "npm run lint -- --fix",
-    "lint-styles": "stylelint app/*.css app/components/*.css --syntax scss",
-    "lint-styles-fix": "stylefmt -r app/*.css app/components/*.css",
     "package": "npm run build && build --publish never",
     "package-all": "npm run build && build -mwl",
     "package-linux": "npm run build && build --linux",
     "package-mac": "npm run build && build --mac",
     "package-win": "npm run build && build --win --x64",
     "preprod": "cross-env NODE_ENV_RUN=production_test npm run build",
-    "prestart": "npm run build",
-    "prod": "cross-env NODE_ENV=production NODE_ENV_RUN=production-test electron ./app/",
-    "start": "cross-env NODE_ENV=production electron ./app/",
-    "start-test": "cross-env NODE_ENV_RUN=production-test electron ./app/",
+    "prod-test": "cross-env NODE_ENV=production NODE_ENV_RUN=production-test electron ./app/",
+    "start": "npm run dev",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev",
     "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
-    "test": "cross-env NODE_ENV=test BABEL_DISABLE_CACHE=1 node --trace-warnings ./test/runTests.js",
-    "test-watch": "npm test -- --watch",
     "run-tests": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
     "extract-changes": "node ./internals/scripts/extractTranslationChanges.js",
