--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus_Wallet_BETA",
-  "version": "0.9.0-alpha4",
+  "version": "1.0.0",
   "moduleSpecVersion": "0.1.0",
   "supportedModuleSpecVersion": "0.1.0",
   "buildDate": "April 13th 2019",
