Removed Beta Mark
Former-commit-id: 0ad14598c6fe5c38dee0d214bf5c4366d2f0ecad

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA",
+  "productName": "Nexus_Wallet",
   "version": "1.0.0",
   "description": "Nexus",
   "main": "./main.prod.js",
