--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet_BETA",
+  "productName": "Nexus_Wallet",
   "version": "1.0.0",
   "moduleSpecVersion": "0.1.0",
   "supportedModuleSpecVersion": "0.1.0",
-  "buildDate": "April 13th 2019",
+  "buildDate": "June 26th 2019",
   "description": "Nexus",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
@@ -33,7 +33,7 @@
   "browserslist": "electron 1.8",
   "build": {
     "productName": "Nexus Wallet",
-    "appId": "com.nexusearth.NexusTritiumBeta",
+    "appId": "com.nexusearth.NexusTritium",
     "files": [
       "dist/",
       "node_modules/",
@@ -99,7 +99,7 @@
       "menuCategory": "Nexus",
       "installerSidebar": "resources/installerSidebar.bmp",
       "license": "resources/license.txt",
-      "shortcutName": "Nexus Wallet Beta",
+      "shortcutName": "Nexus Wallet",
       "artifactName": "nexus_wallet-setup-Win-${version}.${ext}"
     },
     "linux": {
