Added Generate and Immature to the eng file and added main.dev and preload.dev to ignore file.
Former-commit-id: 147289a7e4ed2fec42a3b99196580b7c02c7323c

--- a/.gitignore
+++ b/.gitignore
@@ -53,3 +53,7 @@ npm-shrinkwrap\.json~HEAD
 Test-Output
 
 .vscode/*
+
+#These files are generated there for we don't need to store them. 
+app/main.dev.js
+app/module_preload.dev.js
