--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet",
+  "productName": "Nexus Wallet",
   "version": "1.0.0",
   "moduleSpecVersion": "0.1.0",
   "supportedModuleSpecVersion": "0.1.0",
   "buildDate": "June 26th 2019",
-  "description": "Nexus",
+  "description": "User interface for the Nexus blockchain and ecossystem.",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
     "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=development --config webpack.config.renderer.dev.dll.js --color",
@@ -107,7 +107,8 @@
       "target": [
         "deb",
         "AppImage"
-      ]
+      ],
+      "category": "P2P"
     },
     "deb": {
       "artifactName": "nexus_wallet-Linux-${version}.${ext}"
