--- a/package.json
+++ b/package.json
@@ -225,6 +225,7 @@
     "electron-updater": "^4.0.6",
     "emotion-theming": "^10.0.5",
     "extract-zip": "^1.6.7",
+    "fs-extra": "^8.0.1",
     "history": "^4.7.2",
     "istextorbinary": "^2.5.1",
     "jsdom": "^15.1.1",
