--- a/package.json
+++ b/package.json
@@ -186,6 +186,7 @@
     "mini-css-extract-plugin": "^0.7.0",
     "mocha": "^6.1.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
+    "react-hot-loader": "^4.12.0",
     "rimraf": "^2.6.3",
     "spectron": "^7.0.0",
     "style-loader": "^0.23.1",
@@ -203,6 +204,7 @@
     "@emotion/cache": "^10.0.14",
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
+    "@hot-loader/react-dom": "^16.8.6",
     "ajv": "^6.10.0",
     "axios": "^0.19.0",
     "browserslist": "^4.6.3",
@@ -244,7 +246,6 @@
     "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
-    "react-hot-loader": "^4.12.0",
     "react-intl": "^2.9.0",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
