Removed 'vPrefixedTagName' from so we can use 'v1.0.0' schema
Former-commit-id: cb2a6492e4316ae6e8790b31853d3868ff88d6cc

--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "publish": {
       "provider": "github",
       "owner": "Nexusoft",
-      "repo": "NexusInterface",
-      "vPrefixedTagName": false
+      "repo": "NexusInterface"
     },
     "mac": {
       "target": [
