Fixed issue that it was making a 2 Nexus Wallet folders, Now also will move the bad folder into the correct one.
Former-commit-id: fc63603c42534ec56f8d0dcc0192ed90ee5583b6

--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus_Wallet",
+  "productName": "Nexus Wallet",
   "version": "1.0.1",
   "description": "Nexus",
   "main": "./main.prod.js",
