updated the scripts and webpack configs
Former-commit-id: 495118c224c92f48609f424c2dd009ad48b73794

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "description": "User interface for the Nexus blockchain and ecossystem.",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
-    "build-dll": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=development --config webpack.config.renderer.dev.dll.js --color",
-    "build-main": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.main.prod.js --color",
-    "build-main-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=development --config webpack.config.main.dev.js --color",
-    "build-renderer": "cross-env NODE_ENV=production node  --max-old-space-size=4076 --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.renderer.prod.js --color",
-    "build-preload-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.preload.dev.js --color",
-    "build-preload": "cross-env NODE_ENV=production node --trace-warnings -r @babel/register ./node_modules/webpack/bin/webpack --mode=production --config webpack.config.preload.prod.js --color",
+    "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.renderer.dev.dll.babel.js --colors",
+    "build-main": "cross-env NODE_ENV=production webpack --config configs/webpack.config.main.prod.babel.js --colors",
+    "build-main-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.main.dev.babel.js --colors",
+    "build-renderer": "cross-env NODE_ENV=production webpack --max-old-space-size=4076 --config configs/webpack.config.renderer.prod.babel.js --colors",
+    "build-preload-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.preload.dev.babel.js --colors",
+    "build-preload": "cross-env NODE_ENV=production webpack --config configs/webpack.config.preload.babel.prod.js --colors",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
     "package": "npm run build && build --publish never",
     "package-all": "npm run build && build -mwl",
@@ -24,7 +24,7 @@
     "prod-test": "cross-env NODE_ENV=production NODE_ENV_RUN=production-test electron ./app/",
     "start": "npm run dev",
     "start-main-dev": "cross-env HOT=1 NODE_ENV=development electron ./app/main.dev",
-    "start-renderer-dev": "cross-env NODE_ENV=development node --trace-warnings -r @babel/register ./node_modules/webpack-dev-server/bin/webpack-dev-server --config webpack.config.renderer.dev.js",
+    "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
     "run-tests": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
     "extract-changes": "node ./internals/scripts/extractTranslationChanges.js",
