fixed & improved webpack configs
Former-commit-id: dc5d8047bb5e6fc3f981e23bd0d1bfdce97d360b

--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
   "description": "User interface for the Nexus blockchain and ecossystem.",
   "scripts": {
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
-    "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.renderer.dev.dll.babel.js --colors",
+    "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.renderer.dll.dev.babel.js --colors",
     "build-main": "cross-env NODE_ENV=production webpack --config configs/webpack.config.main.prod.babel.js --colors",
     "build-main-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.main.dev.babel.js --colors",
     "build-renderer": "cross-env NODE_ENV=production webpack --max-old-space-size=4076 --config configs/webpack.config.renderer.prod.babel.js --colors",
     "build-preload-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.preload.dev.babel.js --colors",
-    "build-preload": "cross-env NODE_ENV=production webpack --config configs/webpack.config.preload.babel.prod.js --colors",
+    "build-preload": "cross-env NODE_ENV=production webpack --config configs/webpack.config.preload.prod.babel.js --colors",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
     "package": "npm run build && build --publish never",
     "package-all": "npm run build && build -mwl",
@@ -193,6 +193,7 @@
     "svg-sprite-loader": "^4.1.6",
     "svgo": "^1.2.2",
     "svgo-loader": "^2.2.1",
+    "terser-webpack-plugin": "^1.3.0",
     "url-loader": "^2.0.1",
     "webpack": "^4.35.2",
     "webpack-bundle-analyzer": "^3.3.2",
