--- a/package.json
+++ b/package.json
@@ -166,12 +166,16 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "@babel/register": "^7.4.4",
+    "@hot-loader/react-dom": "^16.8.6",
     "babel-eslint": "^10.0.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-dev-expression": "^0.2.1",
     "babel-plugin-emotion": "^10.0.14",
     "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
+    "browserslist": "^4.6.3",
+    "chai": "^4.2.0",
+    "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.2",
     "concurrently": "^4.1.1",
     "cross-env": "^5.2.0",
@@ -205,13 +209,9 @@
     "@emotion/cache": "^10.0.14",
     "@emotion/core": "^10.0.14",
     "@emotion/styled": "^10.0.14",
-    "@hot-loader/react-dom": "^16.8.6",
     "ajv": "^6.10.0",
     "axios": "^0.19.0",
-    "browserslist": "^4.6.3",
     "btoa": "^1.2.1",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "check-disk-space": "^2.1.0",
     "color": "^3.1.2",
     "connected-react-router": "^6.5.0",
@@ -219,12 +219,9 @@
     "core-js": "^3.1.4",
     "cpy": "^7.3.0",
     "csvtojson": "^2.0.10",
-    "devtron": "^1.4.0",
+    "d3-geo": "^1.11.6",
     "dompurify": "^1.0.11",
     "electron": "^5.0.6",
-    "electron-debug": "^3.0.1",
-    "electron-directory": "0.0.3",
-    "electron-is-dev": "^1.1.0",
     "electron-log": "^3.0.6",
     "electron-updater": "^4.0.14",
     "emotion-theming": "^10.0.14",
@@ -242,9 +239,7 @@
     "pretty-bytes": "^5.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-activity": "^1.2.2",
     "react-color": "^2.17.3",
-    "react-countdown-now": "^2.1.1",
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-intl": "^2.9.0",
@@ -252,7 +247,6 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-table": "^6.10.0",
-    "react-vis": "^1.11.7",
     "redux": "^4.0.1",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
@@ -267,12 +261,10 @@
     "universal-analytics": "^0.4.20",
     "url-join": "^4.0.0",
     "victory": "^32.3.3",
-    "xmlhttprequest": "^1.8.0",
-    "zlib": "^1.0.5"
+    "xmlhttprequest": "^1.8.0"
   },
   "devEngines": {
     "node": ">=10.x",
-    "npm": ">=6.x",
-    "yarn": ">=0.21.3"
+    "npm": ">=6.x"
   }
 }
