updated packaging, optimized sizes
Former-commit-id: 0347670872cb0df0fb7b11966c17358b952951d6

--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "build-preload-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.preload.dev.babel.js --colors",
     "build-preload": "cross-env NODE_ENV=production webpack --config configs/webpack.config.preload.prod.babel.js --colors",
     "dev": "cross-env START_HOT=1 npm run start-renderer-dev",
-    "package": "npm run build && build --publish never",
-    "package-all": "npm run build && build -mwl",
-    "package-linux": "npm run build && build --linux",
-    "package-mac": "npm run build && build --mac",
-    "package-win": "npm run build && build --win --x64",
+    "package": "npm run build && electron-builder build --publish never",
+    "package-all": "npm run build && electron-builder build -mwl",
+    "package-linux": "npm run build && electron-builder build --linux",
+    "package-mac": "npm run build && electron-builder build --mac",
+    "package-win": "npm run build && electron-builder build --win --x64",
     "preprod": "cross-env NODE_ENV_RUN=production_test npm run build",
     "prod-test": "cross-env NODE_ENV=production NODE_ENV_RUN=production-test electron ./app/",
     "start": "npm run dev",
@@ -32,29 +32,26 @@
     "update-documentation": "./UpdateDocumentation.sh"
   },
   "browserslist": "electron 5.0.6",
+  "main": "./app/main.prod.js",
   "build": {
     "productName": "Nexus Wallet",
     "appId": "com.nexusearth.NexusTritium",
     "files": [
-      "dist/",
-      "node_modules/",
-      "app.html",
-      "main.prod.js",
-      "main.prod.js.map",
-      "package.json",
-      "resources/**/*",
-      "installerSiderbar.bmp"
+      "app/dist/*",
+      "!app/dist/*.map",
+      "app/app.html",
+      "app/main.prod.js",
+      "!node_modules/**/*"
     ],
     "extraResources": [
       "./app/GeoLite2-City/**/*",
       "./app/images/tray/**/*",
       "./app/cores/**/*",
       "./app/images/background/**/*",
-      "license.txt",
-      "installerSidebar.bmp",
       "./app/languages/*",
+      "LICENSE.txt",
       {
-        "from": "./app/fonts",
+        "from": "./app/dist/fonts",
         "to": "fonts"
       }
     ],
@@ -176,6 +173,7 @@
     "cross-env": "^5.2.0",
     "cross-spawn": "^6.0.5",
     "css-loader": "^3.0.0",
+    "electron": "^5.0.6",
     "electron-builder": "^20.44.4",
     "electron-devtools-installer": "^2.2.4",
     "eslint": "^6.0.1",
@@ -216,7 +214,6 @@
     "csvtojson": "^2.0.10",
     "d3-geo": "^1.11.6",
     "dompurify": "^1.0.11",
-    "electron": "^5.0.6",
     "electron-log": "^3.0.6",
     "electron-updater": "^4.0.14",
     "emotion-theming": "^10.0.14",
