moved tray images to resources folder
Former-commit-id: 2b071a9c9843ce9305da183002b31dc11a304c4e

--- a/package.json
+++ b/package.json
@@ -45,10 +45,9 @@
     ],
     "extraResources": [
       "./app/GeoLite2-City/**/*",
-      "./app/images/tray/**/*",
       "./app/cores/**/*",
-      "./app/images/background/**/*",
-      "./app/languages/*"
+      "./app/languages/*",
+      "./resources/tray/**/*"
     ],
     "publish": {
       "provider": "github",
