all distribution files now compiled to dist folder
Former-commit-id: b468e63dd66927eddc58da5f249281688c3ebc32

--- a/.gitignore
+++ b/.gitignore
@@ -34,14 +34,7 @@ app/node_modules
 
 # App packaged
 release
-app/main.prod.js
-app/main.prod.js.map
-app/renderer.prod.js
-app/renderer.prod.js.map
-app/style.css
-app/style.css.map
-app/dist
-app/fonts
+dist
 dll
 main.js.map
 
