--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,5 +4,5 @@
     "allowJs": true,
     "noEmit": true
   },
-  "exclude": ["node_modules", "release", "dll", "dist"]
+  "exclude": ["node_modules", "release", "dll", "build"]
 }
