--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
   "buildDate": "June 28th 2019",
   "description": "User interface for the Nexus blockchain and ecossystem.",
   "scripts": {
-    "prebuild-dev": "concurrently \"npm run build-main-dev\" \"node -r @babel/register ./internals/scripts/checkDll.js\" ",
+    "prebuild-dev": "concurrently \"npm run build-main-dev\" \"npm run build-preload-dev\" \"node -r @babel/register ./internals/scripts/checkDll.js\" ",
     "dev": "npm run prebuild-dev && concurrently \"npm run start-renderer-dev\" \"npm run start-main-dev\"",
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
     "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.renderer.dll.dev.babel.js --colors",
     "build-main": "cross-env NODE_ENV=production webpack --config configs/webpack.config.main.prod.babel.js --colors",
+    "build-preload-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.preload.dev.babel.js --colors",
     "build-main-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.main.dev.babel.js --colors",
     "build-renderer": "cross-env NODE_ENV=production webpack --max-old-space-size=4076 --config configs/webpack.config.renderer.prod.babel.js --colors",
     "build-preload": "cross-env NODE_ENV=production webpack --config configs/webpack.config.preload.prod.babel.js --colors",
