Added 3.0.2 core and temp anti sign
Former-commit-id: 035f28abe65abbdc724ccb1dcc5678444919ca08

--- a/package.json
+++ b/package.json
@@ -68,11 +68,13 @@
       "category": "public.app-category.utilities",
       "extraResources": [
         "./assets/darwin/cores/**/*"
-      ]
+      ],
+      "identity": null
     },
     "dmg": {
       "artifactName": "nexus_wallet-MacOSX-${version}.${ext}",
       "background": "assets/background.jpg",
+      "sign": false,
       "contents": [
         {
           "x": 129,
