--- a/package.json
+++ b/package.json
@@ -226,6 +226,7 @@
     "electron-log": "^3.0.6",
     "electron-updater": "^4.1.2",
     "emotion-theming": "^10.0.14",
+    "es2015-i18n-tag": "^1.6.0",
     "extract-zip": "^1.6.7",
     "fs-extra": "^8.1.0",
     "history": "^4.9.0",
