switched to using polyglot
Former-commit-id: feab289d48692849cd44ae781a3825652d003aaa

--- a/package.json
+++ b/package.json
@@ -226,7 +226,6 @@
     "electron-log": "^3.0.6",
     "electron-updater": "^4.1.2",
     "emotion-theming": "^10.0.14",
-    "es2015-i18n-tag": "^1.6.0",
     "extract-zip": "^1.6.7",
     "fs-extra": "^8.1.0",
     "history": "^4.9.0",
@@ -237,6 +236,7 @@
     "memoize-one": "^5.0.5",
     "move-file": "^1.2.0",
     "multistream": "^3.0.0",
+    "node-polyglot": "^2.3.1",
     "patch-package": "^6.1.2",
     "pretty-bytes": "^5.2.0",
     "prop-types": "^15.7.2",
