renamed languages folder
Former-commit-id: 08c368f7a90e149529570311e5d15adde04bd7a7

--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     ],
     "extraResources": [
       "./assets/GeoLite2-City/**/*",
-      "./assets/languages/*",
+      "./assets/translations/*",
       "./assets/tray/**/*"
     ],
     "publish": {
