--- a/package.json
+++ b/package.json
@@ -161,6 +161,7 @@
     "@babel/plugin-proposal-optional-chaining": "^7.2.0",
     "@babel/plugin-proposal-pipeline-operator": "^7.5.0",
     "@babel/plugin-proposal-throw-expressions": "^7.2.0",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
     "@babel/plugin-syntax-dynamic-import": "^7.2.0",
     "@babel/plugin-syntax-import-meta": "^7.2.0",
     "@babel/plugin-transform-classes": "^7.4.4",
@@ -190,6 +191,7 @@
     "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
+    "i18n-extract": "^0.6.6",
     "mini-css-extract-plugin": "^0.7.0",
     "mocha": "^6.1.4",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
