--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "start-renderer-dev": "cross-env NODE_ENV=development webpack-dev-server --config configs/webpack.config.renderer.dev.babel.js",
     "run-tests": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
-    "extract-changes": "node ./internals/scripts/extractTranslationChanges.js",
-    "update-translations": "node ./internals/scripts/updateTranslations.js",
+    "trans-extract": "node -r @babel/register ./internals/scripts/extractTranslations.js",
     "update-documentation": "./UpdateDocumentation.sh"
   },
   "main": "./build/main.prod.js",
