config shared folder as baseUrl
Former-commit-id: cfa462ac7b0606cfcd5d0f091200a2fb308f6a7c

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "allowJs": true,
-    "noEmit": true
+    "noEmit": true,
+    "baseUrl": "./src/shared"
   },
   "exclude": ["node_modules", "release", "dll", "build"]
 }
