--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "prebuild-dev": "concurrently \"npm run build-main-dev\" \"npm run build-preload-dev\" \"node -r @babel/register ./internals/scripts/checkDll.js\" ",
     "dev": "npm run prebuild-dev && concurrently \"npm run start-renderer-dev\" \"npm run start-main-dev\"",
     "build": "concurrently \"npm run build-main\" \"npm run build-renderer\" \"npm run build-preload\"",
-    "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.renderer.dll.dev.babel.js --colors",
+    "build-dll": "cross-env NODE_ENV=development webpack --config configs/webpack.config.dll.dev.babel.js --colors",
     "build-main": "cross-env NODE_ENV=production webpack --config configs/webpack.config.main.prod.babel.js --colors",
     "build-preload-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.preload.dev.babel.js --colors",
     "build-main-dev": "cross-env NODE_ENV=development webpack --config configs/webpack.config.main.dev.babel.js --colors",
