Added automatic system to take the build folder crowding provides to push into our language files.
Former-commit-id: a0ffe484218a6d1ef783430d7e026dacaf5a53f5

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "run-tests": "./node_modules/mocha/bin/mocha tests/test.js",
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
     "trans-extract": "node -r @babel/register ./internals/scripts/extractTranslations.js",
+    "trans-update": "node -r @babel/register ./internals/scripts/UpdateLanguageFiles.js",
     "update-documentation": "./UpdateDocumentation.sh"
   },
   "main": "./build/main.prod.js",
