--- a/package.json
+++ b/package.json
@@ -266,6 +266,7 @@
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
     "react-table": "^6.10.0",
+    "react-to-print": "^2.3.2",
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
