--- a/package.json
+++ b/package.json
@@ -92,7 +92,8 @@
         "nsis"
       ],
       "extraResources": [
-        "./assets/win32/cores/**/*"
+        "./assets/win32/cores/**/*",
+        "./assets/installerSidebar.bmp"
       ]
     },
     "nsis": {
@@ -101,8 +102,8 @@
       "runAfterFinish": true,
       "allowToChangeInstallationDirectory": true,
       "menuCategory": "Nexus",
-      "installerSidebar": "assets/installerSidebar.bmp",
-      "license": "assets/license.txt",
+      "installerSidebar": "./assets/installerSidebar.bmp",
+      "license": "./assets/license.txt",
       "shortcutName": "Nexus Wallet",
       "artifactName": "nexus_wallet-setup-Win-${version}.${ext}"
     },
@@ -202,7 +203,7 @@
     "electron": "^5.0.6",
     "electron-builder": "^21.0.15",
     "electron-devtools-installer": "^2.2.4",
-    "eslint": "^6.0.1",
+    "eslint": "^6.3.0",
     "express": "^4.17.1",
     "file-loader": "^4.0.0",
     "html-webpack-plugin": "^3.2.0",
