--- a/package.json
+++ b/package.json
@@ -263,6 +263,7 @@
     "react-dom": "^16.8.6",
     "react-dropzone": "^10.1.5",
     "react-intl": "^2.9.0",
+    "react-markdown": "^4.2.2",
     "react-redux": "^7.1.0",
     "react-router": "^5.0.1",
     "react-router-dom": "^5.0.1",
