Added prerelease tag options
Former-commit-id: ad793effff48239732e2e919e9b3f5a42b66ff4f

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus Wallet",
-  "version": "1.3.0",
+  "version": "2.0.0-alpha",
   "moduleSpecVersion": "0.2.1",
   "supportedModuleSpecVersion": "0.1.0",
   "buildDate": "September 5th 2019",
