Changes Nexus To TAO and Nexus Wallet To Nexus Wallet Tritium Alpha
Former-commit-id: 3761702b16fd5c57b390b37f02f3e0f5756ba58c

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nexus_wallet",
-  "productName": "Nexus Wallet",
+  "productName": "Nexus Wallet Tritium Alpha",
   "version": "2.0.0-alpha",
   "moduleSpecVersion": "0.2.1",
   "supportedModuleSpecVersion": "0.1.0",
