--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus Wallet Tritium Alpha",
-  "version": "2.0.0-alpha",
+  "version": "2.0.0-alpha.2",
   "moduleSpecVersion": "0.2.1",
   "supportedModuleSpecVersion": "0.1.0",
   "buildDate": "September 5th 2019",
