--- a/package.json
+++ b/package.json
@@ -235,7 +235,6 @@
     "check-disk-space": "^2.1.0",
     "color": "^3.1.2",
     "connected-react-router": "^6.5.2",
-    "copy-to-clipboard": "^3.2.0",
     "core-js": "^3.1.4",
     "cpy": "^7.3.0",
     "csvtojson": "^2.0.10",
@@ -248,14 +247,12 @@
     "fs-extra": "^8.1.0",
     "history": "^4.9.0",
     "istextorbinary": "^2.5.1",
-    "jsdom": "^15.1.1",
     "macaddress": "^0.2.9",
     "maxmind": "^3.1.2",
     "memoize-one": "^5.0.5",
     "move-file": "^1.2.0",
     "multistream": "^3.0.0",
     "node-polyglot": "^2.3.1",
-    "patch-package": "^6.1.2",
     "pretty-bytes": "^5.2.0",
     "prop-types": "^15.7.2",
     "react": "^16.8.6",
@@ -271,17 +268,14 @@
     "redux": "^4.0.4",
     "redux-form": "^8.2.4",
     "redux-thunk": "^2.3.0",
-    "request-promise": "^4.2.4",
     "semver": "^6.2.0",
     "semver-regex": "^3.1.0",
-    "source-map-support": "^0.5.12",
     "stream-normalize-eol": "^1.0.1",
     "tar": "^4.4.10",
     "three": "^0.106.2",
     "three-orbit-controls": "^82.1.0",
     "universal-analytics": "^0.4.20",
-    "victory": "^32.3.3",
-    "xmlhttprequest": "^1.8.0"
+    "victory": "^32.3.3"
   },
   "devEngines": {
     "node": ">=10.x",
