--- a/package.json
+++ b/package.json
@@ -198,6 +198,7 @@
     "concurrently": "^4.1.2",
     "cross-env": "^6.0.0",
     "cross-spawn": "^7.0.0",
+    "csvtojson": "^2.0.10",
     "electron": "^6.0.10",
     "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
@@ -231,7 +232,6 @@
     "connected-react-router": "^6.5.2",
     "core-js": "^3.2.1",
     "cpy": "^7.3.0",
-    "csvtojson": "^2.0.10",
     "d3-geo": "^1.11.6",
     "dompurify": "^2.0.3",
     "electron-log": "^3.0.8",
@@ -246,7 +246,6 @@
     "move-file": "^1.2.0",
     "multistream": "^4.0.0",
     "node-polyglot": "^2.4.0",
-    "prop-types": "^15.7.2",
     "react": "^16.10.0",
     "react-color": "^2.17.3",
     "react-dom": "^16.10.0",
@@ -260,6 +259,7 @@
     "redux-form": "^8.2.6",
     "redux-thunk": "^2.3.0",
     "semver": "^6.3.0",
+    "string_decoder": "^1.3.0",
     "tar": "^4.4.13",
     "three": "^0.108.0",
     "three-orbit-controls": "^82.1.0",
