--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus Wallet Tritium Beta",
-  "version": "2.0.0-beta.1",
+  "version": "2.0.0-beta.2",
   "moduleSpecVersion": "0.3.0",
   "supportedModuleSpecVersion": "0.1.0",
-  "buildDate": "October 21st 2019",
+  "buildDate": "October 28th 2019",
   "description": "User interface for the Nexus blockchain and ecossystem.",
   "scripts": {
     "prebuild-dev": "concurrently \"npm run build-main-dev\" \"npm run build-preload-dev\" \"node -r @babel/register ./internals/scripts/checkDll.js\" ",
