--- a/package.json
+++ b/package.json
@@ -168,12 +168,15 @@
   "devDependencies": {
     "@babel/cli": "^7.6.4",
     "@babel/core": "^7.6.4",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-decorators": "^7.6.0",
+    "@babel/plugin-syntax-class-properties": "^7.2.0",
+    "@babel/plugin-syntax-decorators": "^7.2.0",
     "@babel/plugin-transform-react-constant-elements": "^7.6.3",
     "@babel/preset-env": "^7.6.3",
     "@babel/preset-react": "^7.6.3",
     "@babel/register": "^7.6.2",
+    "@babel/traverse": "^7.7.2",
     "@hot-loader/react-dom": "^16.10.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-dev-expression": "^0.2.2",
@@ -193,8 +196,8 @@
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
+    "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
-    "i18n-extract": "^0.6.6",
     "mocha": "^6.2.1",
     "react-hot-loader": "^4.12.15",
     "rimraf": "^3.0.0",
