--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
       "owner": "Nexusoft",
       "repo": "NexusInterface"
     },
+    "afterSign": "internals/aftersign.js",
     "mac": {
       "target": [
         "dmg",
@@ -68,7 +69,10 @@
       "extraResources": [
         "./assets/darwin/cores/**/*"
       ],
-      "identity": null
+      "hardenedRuntime": true,
+      "gatekeeperAssess": false,
+      "entitlements": "internals/entitlements.mac.plist",
+      "entitlementsInherit": "internals/entitlements.mac.plist"
     },
     "dmg": {
       "artifactName": "nexus_wallet-MacOSX-${version}.${ext}",
@@ -166,21 +170,21 @@
   ],
   "homepage": "https://github.com/Nexusoft/NexusInterface/#readme",
   "devDependencies": {
-    "@babel/cli": "^7.7.0",
-    "@babel/core": "^7.7.2",
-    "@babel/plugin-proposal-class-properties": "^7.7.0",
-    "@babel/plugin-proposal-decorators": "^7.7.0",
+    "@babel/cli": "^7.6.4",
+    "@babel/core": "^7.6.4",
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-proposal-decorators": "^7.6.0",
     "@babel/plugin-transform-react-constant-elements": "^7.6.3",
-    "@babel/preset-env": "^7.7.1",
-    "@babel/preset-react": "^7.7.0",
-    "@babel/register": "^7.7.0",
-    "@hot-loader/react-dom": "^16.11.0",
+    "@babel/preset-env": "^7.6.3",
+    "@babel/preset-react": "^7.6.3",
+    "@babel/register": "^7.6.2",
+    "@hot-loader/react-dom": "^16.10.2",
     "babel-loader": "^8.0.6",
     "babel-plugin-dev-expression": "^0.2.2",
-    "babel-plugin-emotion": "^10.0.23",
+    "babel-plugin-emotion": "^10.0.21",
     "babel-plugin-transform-react-pure-class-to-function": "^1.0.1",
     "babel-plugin-transform-react-remove-prop-types": "^0.4.24",
-    "browserslist": "^4.7.2",
+    "browserslist": "^4.7.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
     "chalk": "^2.4.2",
@@ -188,42 +192,43 @@
     "cross-env": "^6.0.3",
     "cross-spawn": "^7.0.1",
     "csvtojson": "^2.0.10",
-    "electron": "^6.1.4",
-    "electron-builder": "^22.1.0",
+    "electron": "^6.0.12",
+    "electron-builder": "^21.2.0",
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.17.1",
     "file-loader": "^4.2.0",
     "html-webpack-plugin": "^3.2.0",
-    "i18n-extract": "^0.6.7",
-    "mocha": "^6.2.2",
-    "react-hot-loader": "^4.12.16",
+    "i18n-extract": "^0.6.6",
+    "mocha": "^6.2.1",
+    "react-hot-loader": "^4.12.15",
     "rimraf": "^3.0.0",
     "spectron": "^8.0.0",
     "svg-sprite-loader": "^4.1.6",
-    "svgo": "^1.3.2",
+    "svgo": "^1.3.0",
     "svgo-loader": "^2.2.1",
-    "terser-webpack-plugin": "^2.2.1",
+    "terser-webpack-plugin": "^2.1.3",
     "url-loader": "^2.2.0",
-    "webpack": "^4.41.2",
-    "webpack-bundle-analyzer": "^3.6.0",
-    "webpack-cli": "^3.3.10",
-    "webpack-dev-server": "^3.9.0",
+    "webpack": "^4.41.1",
+    "webpack-bundle-analyzer": "^3.5.2",
+    "webpack-cli": "^3.3.9",
+    "webpack-dev-server": "^3.8.2",
     "webpack-merge": "^4.2.2"
   },
   "dependencies": {
     "@emotion/cache": "^10.0.19",
-    "@emotion/core": "^10.0.22",
-    "@emotion/styled": "^10.0.23",
+    "@emotion/core": "^10.0.21",
+    "@emotion/styled": "^10.0.17",
     "ajv": "^6.10.2",
     "axios": "^0.19.0",
     "check-disk-space": "^2.1.0",
     "color": "^3.1.2",
-    "core-js": "^3.4.0",
+    "core-js": "^3.2.1",
     "cpy": "^7.3.0",
-    "d3-geo": "^1.11.7",
+    "d3-geo": "^1.11.6",
     "dompurify": "^2.0.7",
-    "electron-log": "^3.0.9",
-    "electron-updater": "^4.2.0",
+    "electron-log": "^3.0.8",
+    "electron-notarize": "^0.2.0",
+    "electron-updater": "^4.1.2",
     "emotion-theming": "^10.0.19",
     "extract-zip": "^1.6.7",
     "fs-extra": "^8.1.0",
@@ -234,12 +239,12 @@
     "move-file": "^1.2.0",
     "multistream": "^4.0.0",
     "node-polyglot": "^2.4.0",
-    "react": "^16.11.0",
+    "react": "^16.10.2",
     "react-color": "^2.17.3",
-    "react-dom": "^16.11.0",
+    "react-dom": "^16.10.2",
     "react-dropzone": "^10.1.10",
     "react-markdown": "^4.2.2",
-    "react-redux": "^7.1.3",
+    "react-redux": "^7.1.1",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
     "react-table": "^6.10.3",
@@ -251,7 +256,7 @@
     "three": "^0.109.0",
     "three-orbit-controls": "^82.1.0",
     "universal-analytics": "^0.4.20",
-    "victory": "^33.1.2"
+    "victory": "^33.1.1"
   },
   "devEngines": {
     "node": ">=10.x",
