Mac auto update works
Former-commit-id: 173dc0b2302be517e715f5769248009d652fe670

--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
         "dmg",
         "zip"
       ],
+      "artifactName": "nexus_wallet-MacOSX-${version}.${ext}",
       "category": "public.app-category.utilities",
       "extraResources": [
         "./assets/darwin/cores/**/*"
