added generate recovery phrase functionality
Former-commit-id: 4609be4420205528b8a2b05daa56f49cac142b54

--- a/package.json
+++ b/package.json
@@ -52,7 +52,8 @@
     "extraResources": [
       "./assets/GeoLite2-City/**/*",
       "./assets/translations/*",
-      "./assets/tray/**/*"
+      "./assets/tray/**/*",
+      "./assets/misc/**/*"
     ],
     "publish": {
       "provider": "github",
