--- a/package.json
+++ b/package.json
@@ -177,6 +177,8 @@
     "@babel/core": "^7.7.2",
     "@babel/plugin-proposal-class-properties": "^7.7.0",
     "@babel/plugin-proposal-decorators": "^7.7.0",
+    "@babel/plugin-syntax-class-properties": "^7.7.4",
+    "@babel/plugin-syntax-decorators": "^7.7.4",
     "@babel/plugin-transform-react-constant-elements": "^7.6.3",
     "@babel/preset-env": "^7.7.1",
     "@babel/preset-react": "^7.7.0",
@@ -194,6 +196,7 @@
     "concurrently": "^5.0.0",
     "cross-env": "^6.0.3",
     "cross-spawn": "^7.0.1",
+    "csv-stringify": "^5.3.3",
     "csvtojson": "^2.0.10",
     "electron": "^6.1.4",
     "electron-builder": "^22.0.0",
@@ -228,6 +231,7 @@
     "color": "^3.1.2",
     "core-js": "^3.4.0",
     "cpy": "^7.3.0",
+    "csv-parse": "^4.8.2",
     "d3-geo": "^1.11.7",
     "dompurify": "^2.0.7",
     "electron-log": "^3.0.9",
