--- a/package.json
+++ b/package.json
@@ -261,7 +261,7 @@
     "string_decoder": "^1.3.0",
     "tar": "^5.0.5",
     "three": "^0.111.0",
-    "three-orbit-controls": "^82.1.0",
+    "three-orbitcontrols": "^2.110.1",
     "universal-analytics": "^0.4.20",
     "victory": "^33.1.6"
   },
