--- a/package.json
+++ b/package.json
@@ -202,6 +202,7 @@
     "electron-devtools-installer": "^2.2.4",
     "express": "^4.17.1",
     "file-loader": "^5.0.2",
+    "friendly-errors-webpack-plugin": "^1.7.0",
     "glob": "^7.1.6",
     "html-webpack-plugin": "^3.2.0",
     "i18n-extract": "^0.6.7",
