Updated Maxmind and added update script
Former-commit-id: fa05a60a2b33af19f6acf4a62d768aff84720d86

--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "version2": "node ./internals/scripts/UpdateBuildDate.js",
     "trans-extract": "node -r @babel/register ./internals/scripts/extractTranslations.js",
     "trans-update": "node -r @babel/register ./internals/scripts/UpdateLanguageFiles.js",
-    "update-documentation": "./UpdateDocumentation.sh"
+    "update-documentation": "./UpdateDocumentation.sh",
+    "update-maxmind": "node -r @babel/register ./internals/scripts/UpdateMaxMind.js"
   },
   "main": "./build/main.prod.js",
   "build": {
