[WIP] virtual keyboard
Former-commit-id: 0508cf3efc38ab07fcbdcb3e51e1cbf43ac17606

--- a/package.json
+++ b/package.json
@@ -254,6 +254,7 @@
     "react-redux": "^7.1.3",
     "react-router": "^5.1.2",
     "react-router-dom": "^5.1.2",
+    "react-simple-keyboard": "^2.1.96",
     "react-table": "^6.11.5",
     "redux": "^4.0.4",
     "redux-form": "^8.2.6",
