brought keyboard into build flow
Former-commit-id: ec374c97948b7a882166d3db4f974cb8a5566acf

--- a/package.json
+++ b/package.json
@@ -48,6 +48,13 @@
         "filter": [
           "app.html"
         ]
+      },
+      {
+        "from": "src/keyboard",
+        "to": "build",
+        "filter": [
+          "keyboard.html"
+        ]
       }
     ],
     "extraResources": [
