removed Market Data page
Former-commit-id: 9dcb98fdb293fc328da0ba71a24de6a2895395fd

--- a/package.json
+++ b/package.json
@@ -269,8 +269,7 @@
     "tar": "^5.0.5",
     "three": "^0.111.0",
     "three-orbitcontrols": "^2.110.1",
-    "universal-analytics": "^0.4.20",
-    "victory": "^33.1.7"
+    "universal-analytics": "^0.4.20"
   },
   "devEngines": {
     "node": ">=10.x",
