legacy transactions chart still needs victory
Former-commit-id: d7b9cb820d0726bcfff7eef7e86e25a37b687d8a

--- a/package.json
+++ b/package.json
@@ -269,7 +269,8 @@
     "tar": "^5.0.5",
     "three": "^0.111.0",
     "three-orbitcontrols": "^2.110.1",
-    "universal-analytics": "^0.4.20"
+    "universal-analytics": "^0.4.20",
+    "victory": "^34.1.1"
   },
   "devEngines": {
     "node": ">=10.x",
