--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus Wallet",
-  "version": "2.2.2",
+  "version": "3.0.0-beta-1",
   "backwardCompatible": "2.2.0",
   "buildDate": "February 21st 2020",
   "description": "User interface for the Nexus blockchain and ecosystem.",
