--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "nexus_wallet",
   "productName": "Nexus Wallet",
-  "version": "3.0.0-beta-2",
+  "version": "3.0.0",
   "backwardCompatible": "2.2.0",
-  "buildDate": "February 21st 2020",
+  "buildDate": "March 10th 2020",
   "description": "User interface for the Nexus blockchain and ecosystem.",
   "scripts": {
     "prebuild-dev": "concurrently \"npm run build-main-dev\" \"npm run build-preload-dev\" \"node -r @babel/register ./internals/scripts/checkDll.js\" ",
